# markovpy

./: .buildinfo  .gitignore  CNAME  README.md  __init__.py  chain.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  python-package.yml  release.yml  tests.yml  wheels.yml
_modules/: index.html
_modules/markovpy/: chain.html
_modules/markovpy/algorithms/: analysis.html  reachability.html  simulation.html  states.html
_sources/: index.rst.txt
_sources/source/: markovpy.algorithms.rst.txt  markovpy.rst.txt  modules.rst.txt  overview.rst.txt  quickstart.rst.txt
algorithms/: reachability.py  states.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: markovpy.algorithms.doctree  markovpy.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/markovpy/: chain.html
docs/_build/html/_modules/markovpy/algorithms/: reachability.html  simulation.html  states.html
docs/_build/html/_sources/source/: markovpy.algorithms.rst.txt  markovpy.rst.txt  modules.rst.txt
docs/_build/html/source/: markovpy.algorithms.html  markovpy.html  modules.html
docs/source/: markovpy.algorithms.rst  markovpy.rst
source/: markovpy.algorithms.html  markovpy.html  modules.html  overview.html  quickstart.html
src/markovpy/: __init__.py  chain.py
src/markovpy/algorithms/: __init__.py  analysis.py  hitting_times.py  simulation.py  states.py
tests/: test_algorithm_reachability.py  test_algorithm_simulation.py  test_algorithms_states.py  test_chain.py  test_chain_from_matrix.py  test_chain_merge.py  test_chain_to_matrix.py  test_expected_hitting_times.py  test_stationary_distribution.py
