[project]
name = "markovpy"
version = "0.2.0"
description = "A lightweight Markov chain library inspired by NetworkX"
authors = [{ name = "Ames Turner" }]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "numpy>=1.26"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
