[project]
name = "markovpy"
dynamic = ["version"]
description = "A lightweight Markov chain library inspired by NetworkX"
authors = [{ name = "Ames Turner" }]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "numpy>=1.26"
]

[tool.setuptools.dynamic]
version = { attr = "markovpy.__version__" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.3.1"
commit = true
tag = true

parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
ignore_missing_files = false
moveable_tags = []
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "src/markovpy/__init__.py"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
